fixed layout shift when modal opens

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+html {
   overflow-y: scroll;
+}
+
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
